@@ -1,3 +1,9 @@
+2001-05-11  Bill Gribble  <grib@billgribble.com>
+
+	* src/scm/main-window.scm: force-output when saving param files.
+	otherwise they don't get written until program exit, which can
+	cause problems.  Add newlines to acct tree output. 
+
 2001-05-11  Dave Peticolas  <dave@krondo.com>
 
 	* src/doc/design/engine.texinfo: update docs
